fixed spacing in nav and footer; fixed sizing of elements

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.logo_img {
+    width: 134px;
+    height: 45px;
+    position: absolute;
+    top: 5px;
+}
+
 .jumbotron {
     height: 500px;
 }
@@ -18,9 +25,18 @@ section p {
     font-size: 21px;
 }
 
-img {
+.pfp_img {
     width: 221px;
     height: 225px;
+}
+
+.venue_p {
+    width: 350px;
+}
+
+.venue_img {
+    width: 471px;
+    height: 454px;
 }
 
 footer {
